--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <h1>I'm Adir Noyman</h1>
             <h2  id="programmer">a programmer</h2>
             <img class="bottom-cloud" src="IMAGES/cloud.png" alt="cloud-image">
-            <img src="IMAGES/mountain.png" alt="mountain-image">
+            <img id="mountain" src="IMAGES/mountain.png" alt="mountain-image">
 
         </div>
         <div class="middle-container">
           <div class="profile">
             <img id="dumb" src="IMAGES/dumb.jpg" alt="DUMB ASS">
             <h2>Hello Beautiful</h2>
-            <p>Adiros gadolos meodos and I ♥ coding....yes yes yes...go to the App Brewery</p>
+            <p class="intro">Adiros gadolos meodos and I ❤️ coding....yes yes yes...go to the App Brewery</p>
           </div>
           <hr>
           <div class="skills">
@@ -40,7 +40,7 @@
           <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>Adiros gadolos meodos.</h3>
-            <p>The robot was trained with 300 attempts, rather than the thousands it would traditionally take, learning to cluster different attempts into groups as a kind of short hand similar to how human teach themselves. With each attempt, the robot pushing against the block, testing for tactile feedback to determine whether it’s a safe bet</p>
+            <p class="contact-message">The robot was trained with 300 attempts, rather than the thousands it would traditionally take, learning to cluster different attempts into groups as a kind of short hand similar to how human teach themselves. With each attempt, the robot pushing against the block, testing for tactile feedback to determine whether it’s a safe bet</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
           </div>
         </div>
@@ -50,7 +50,7 @@
           <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
           <a class="footer-link" href="https://twitter.com/">Twitter</a>
           <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-          <p>© 2018 Adir Noyman.</p>
+          <p class="copyright">© 2018 Adir Noyman.</p>
         </div>
 
     </body>
